Add some basic unittests
- Add some unit test coverage
- Add how to run tests into the README
- Add to GitHub action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,7 @@ jobs:
     - name: Check files are formatted with black
       run: |
         black --check --diff .
+
+    - name: Run unittests
+      run: |
+        python godaddyip/tests.py -v
